compiler/tools/fpp-check/test/redef_component_struct.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef_component_struct.fpp: 3.1
struct C { }
^
error: redefinition of symbol C
previous definition was here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef_component_struct.fpp: 1.1
passive component C { }
^
